// Vitest Snapshot v1

exports[`PullDownRefresh > PullDownRefresh baseVue demo works fine 1`] = `
<div
  class="t-pull-down-refresh"
>
  <div
    class="t-pull-down-refresh__track"
    style="transition-duration: 300ms; transform: translate3d(0, 0px, 0);"
  >
    <div
      class="t-pull-down-refresh__max"
      style="height: 80px;"
    >
      <div
        class="t-pull-down-refresh__loading"
        style="height: 50px;"
      >
        <div />
      </div>
    </div>
    
    
     下拉刷新 
    
    
  </div>
</div>
`;

exports[`PullDownRefresh > PullDownRefresh loadingTextsVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-pull-down-refresh"
    >
      <div
        class="t-pull-down-refresh__track"
        style="transition-duration: 300ms; transform: translate3d(0, 0px, 0);"
      >
        <div
          class="t-pull-down-refresh__max"
          style="height: 100px;"
        >
          <div
            class="t-pull-down-refresh__loading"
            style="height: 70px;"
          >
            <div />
          </div>
        </div>
        
        下拉刷新
        
      </div>
    </div>
    
  </div>
</div>
`;

exports[`PullDownRefresh > PullDownRefresh mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-43d0a031=""
  style="background-color: rgb(255, 255, 255); height: 100vh;"
>
  <div
    class="tdesign-mobile-demo-block"
    data-v-43d0a031=""
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-pull-down-refresh"
      data-v-43d0a031=""
    >
      <div
        class="t-pull-down-refresh__track"
        style="transition-duration: 300ms; transform: translate3d(0, 0px, 0);"
      >
        <div
          class="t-pull-down-refresh__max"
          style="height: 80px;"
        >
          <div
            class="t-pull-down-refresh__loading"
            style="height: 50px;"
          >
            <div />
          </div>
        </div>
        
        
        <h1
          class="title"
          data-v-43d0a031=""
        >
          PullDownRefresh 下拉刷新
        </h1>
        <p
          class="summary"
          data-v-43d0a031=""
        >
          用于快速刷新页面信息，刷新可以是整页刷新也可以是页面的局部刷新。
        </p>
        <div
          class="tdesign-mobile-block"
          data-v-43d0a031=""
        >
          拖拽该区域演示 顶部下拉刷新
        </div>
        <div
          class="content"
          data-v-43d0a031=""
        >
          
          <div
            class="row"
            data-v-43d0a031=""
          >
            
            <div
              class="item"
              data-v-43d0a031=""
            >
              <div
                class="t-skeleton"
                data-v-43d0a031=""
              >
                
                <div
                  class="t-skeleton__content"
                >
                  
                  <div
                    class="t-skeleton__row"
                  >
                    
                    <div
                      class="t-skeleton__col t-skeleton--type-text"
                    />
                    
                  </div>
                  <div
                    class="t-skeleton__row"
                  >
                    
                    <div
                      class="t-skeleton__col t-skeleton--type-text"
                      style="width: 80%;"
                    />
                    
                  </div>
                  <div
                    class="t-skeleton__row"
                  >
                    
                    <div
                      class="t-skeleton__col t-skeleton--type-text"
                      style="height: 171px; border-radius: 16px;"
                    />
                    
                  </div>
                  
                </div>
                
              </div>
            </div>
            <div
              class="item"
              data-v-43d0a031=""
            >
              <div
                class="t-skeleton"
                data-v-43d0a031=""
              >
                
                <div
                  class="t-skeleton__content"
                >
                  
                  <div
                    class="t-skeleton__row"
                  >
                    
                    <div
                      class="t-skeleton__col t-skeleton--type-text"
                    />
                    
                  </div>
                  <div
                    class="t-skeleton__row"
                  >
                    
                    <div
                      class="t-skeleton__col t-skeleton--type-text"
                      style="width: 80%;"
                    />
                    
                  </div>
                  <div
                    class="t-skeleton__row"
                  >
                    
                    <div
                      class="t-skeleton__col t-skeleton--type-text"
                      style="height: 171px; border-radius: 16px;"
                    />
                    
                  </div>
                  
                </div>
                
              </div>
            </div>
            
          </div>
          
        </div>
        
        
      </div>
    </div>
    
  </div>
</div>
`;

exports[`PullDownRefresh > PullDownRefresh timeoutVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-pull-down-refresh"
    >
      <div
        class="t-pull-down-refresh__track"
        style="transition-duration: 300ms; transform: translate3d(0, 0px, 0);"
      >
        <div
          class="t-pull-down-refresh__max"
          style="height: 80px;"
        >
          <div
            class="t-pull-down-refresh__loading"
            style="height: 50px;"
          >
            <div />
          </div>
        </div>
        
        下拉刷新
        
      </div>
    </div>
    
  </div>
</div>
`;
